image revision in edit entry

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -209,6 +209,11 @@ div.spScreenTitle h4 {
 #SPAdminForm fieldset .controls {
   margin-left: 220px;
 }
+#SPAdminForm fieldset.form-horizontal div.spEditImage label {
+  margin: 5px;
+  float: none;
+  display: inline;
+}
 #SPAdminForm .nav-tabs a {
   color: #0000b3;
   /*#0088cc;*/
