--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -257,6 +257,12 @@ div.spScreenTitle h4 {
   margin-left: 220px;
 }
 
+#SPAdminForm fieldset.form-horizontal div.spEditImage label {
+  margin: 5px;
+  float: none;
+  display: inline;
+}
+
 #SPAdminForm .nav-tabs a {
   color: #0000b3; /*#0088cc;*/
   text-decoration: none;
