checkboxgroup and Radios

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -20,6 +20,9 @@
   color: #333333;
   font-size: 15px;
 }
+.SobiPro .clearall {
+  clear: both;
+}
 .SobiPro .breadcrumb {
   padding: 7px 14px;
   margin: 0 0 18px;
@@ -453,4 +456,11 @@ input.sp-input-micro[type="text"] {
 }
 .GeoMap {
   margin-right: 10px!important;
+}
+.GeoMap img {
+  max-width: inherit;
+}
+/* Aggregation Field */
+.SPtagsinput {
+  border-radius: 3px;
 }
