--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -27,6 +27,9 @@
   font-size: @font-size;
 }
 
+.SobiPro .clearall {
+  clear: both;
+}
 .SobiPro .breadcrumb {
   padding: 7px 14px;
   margin: 0 0 18px;
@@ -548,4 +551,12 @@ input.sp-input-micro[type="text"] {
 }
 .GeoMap {
   margin-right: 10px!important;
+}
+.GeoMap img {
+  max-width: inherit;
+}
+
+/* Aggregation Field */
+.SPtagsinput {
+  border-radius: 3px;
 }
