--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -389,6 +389,7 @@ div.spScreenTitle h4 {
   font-size: 110%;
 }
 
+.SobiPro .SpCellCenter .icon-pause,
 .SobiPro .SpCellCenter .icon-ok {
   color: green;
 }
@@ -403,16 +404,48 @@ div.spScreenTitle h4 {
 .SobiPro .SpCellCenter .icon-edit {
 }
 
-.SobiPro .SpCellCenter .icon-shopping-cart,
+.SobiPro .SpCellCenter .icon-money,
 .SobiPro .SpCellCenter .icon-check-empty,
 .SobiPro .SpCellCenter .icon-lock,
 .SobiPro .SpCellCenter .icon-thumbs-down {
   color: grey;
 }
 
+.SobiPro .SpCellCenter .icon-stop {
+  color: orange;
+}
+
+.SobiPro .SpCellCenter a.checkedout .icon-lock {
+  color: #b22222;
+}
+
 .SobiPro .SpCellCenter .sp-mini-bt {
   padding: 4px 4px !important;
 }
+
+.SobiPro .tooltip-inner {
+  color: #ffffff;
+  text-align: center;
+  background-color: #000066;
+}
+
+.SobiPro .tooltip.top .tooltip-arrow {
+  border-top-color: #000066;
+}
+
+.SobiPro .tooltip.right .tooltip-arrow {
+  border-right-color: #000066;
+}
+
+.SobiPro .tooltip.left .tooltip-arrow {
+  border-left-color: #000066;
+}
+
+.SobiPro .tooltip.bottom .tooltip-arrow {
+  border-bottom-color: #000066;
+}
+
+
 
 #SPAdminForm .input-splarge {
   width: 400px;
