--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -326,6 +326,7 @@ div.spScreenTitle h4 {
   color: #333333;
   font-size: 110%;
 }
+.SobiPro .SpCellCenter .icon-pause,
 .SobiPro .SpCellCenter .icon-ok {
   color: green;
 }
@@ -333,14 +334,37 @@ div.spScreenTitle h4 {
   color: #993333;
   font-size: 124%;
 }
-.SobiPro .SpCellCenter .icon-shopping-cart,
+.SobiPro .SpCellCenter .icon-money,
 .SobiPro .SpCellCenter .icon-check-empty,
 .SobiPro .SpCellCenter .icon-lock,
 .SobiPro .SpCellCenter .icon-thumbs-down {
   color: grey;
 }
+.SobiPro .SpCellCenter .icon-stop {
+  color: orange;
+}
+.SobiPro .SpCellCenter a.checkedout .icon-lock {
+  color: #b22222;
+}
 .SobiPro .SpCellCenter .sp-mini-bt {
   padding: 4px 4px !important;
+}
+.SobiPro .tooltip-inner {
+  color: #ffffff;
+  text-align: center;
+  background-color: #000066;
+}
+.SobiPro .tooltip.top .tooltip-arrow {
+  border-top-color: #000066;
+}
+.SobiPro .tooltip.right .tooltip-arrow {
+  border-right-color: #000066;
+}
+.SobiPro .tooltip.left .tooltip-arrow {
+  border-left-color: #000066;
+}
+.SobiPro .tooltip.bottom .tooltip-arrow {
+  border-bottom-color: #000066;
 }
 #SPAdminForm .input-splarge {
   width: 400px;
