--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -593,3 +593,9 @@ input.sp-input-micro[type="text"] {
 .SPtagsinput {
   border-radius: 3px;
 }
+
+a.invalid {
+  color: red!important;
+  font-weight: normal;
+  text-decoration: line-through;
+}
