--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -445,7 +445,12 @@ div.spScreenTitle h4 {
   border-bottom-color: #000066;
 }
 
-
+.SobiPro .popover {
+  width: 310px;
+}
+.SobiPro .popover-inner {
+  text-align: left;
+}
 
 #SPAdminForm .input-splarge {
   width: 400px;
