Pagination für Entries und Categories gestyled Pagination for Fields begonnen

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -452,6 +452,38 @@ div.spScreenTitle h4 {
   text-align: left;
 }
 
+#SPAdminForm .pagination-toolbar a {
+  line-height: 28px;
+  color: #1337d1;
+}
+
+#SPAdminForm .pagination ul {
+  height: 28px;
+}
+#SPAdminForm .pagination i {
+  margin-bottom: -2px;
+  margin-top: 2px;
+}
+#SPAdminForm .pagination .disabled a,
+#SPAdminForm .pagination .active a,
+#SPAdminForm .pagination .active span {
+  color: #999999;
+  cursor: default;
+  font-weight: normal;
+}
+#SPAdminForm .pagination a:hover,
+#SPAdminForm .pagination .active a,
+#SPAdminForm .pagination .active span {
+  background-color: #F5F5F5;
+}
+#SPAdminForm .pagination .disabled a:hover {
+  background-color: transparent;
+}
+
+#SPAdminForm .spSubmit {
+  text-align: right;
+}
+
 #SPAdminForm .input-splarge {
   width: 400px;
 }
