--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -30,6 +30,7 @@
 .SobiPro .clearall {
   clear: both;
 }
+
 .SobiPro .breadcrumb {
   padding: 7px 14px;
   margin: 0 0 18px;
@@ -214,7 +215,7 @@ div.spScreenTitle h4 {
 
 .modal-footer .btn,
 .modal-footer .btn:hover {
-  color: #333333!important;
+  color: #333333 !important;
 }
 
 .modal-footer .btn-primary,
@@ -223,7 +224,7 @@ div.spScreenTitle h4 {
 .modal-footer .btn-danger:hover,
 .modal-footer .btn-success,
 .modal-footer .btn-success:hover {
-  color: #ffffff!important;
+  color: #ffffff !important;
 }
 
 .SobiPro .modal {
@@ -266,6 +267,7 @@ div.spScreenTitle h4 {
   display: inline;
   color: #808080;
 }
+
 #SPAdminForm fieldset.form-horizontal label {
   clear: none;
 }
@@ -281,7 +283,7 @@ div.spScreenTitle h4 {
 
 #SPAdminForm .controls .btn:active,
 #SPAdminForm .controls .btn.active {
-  /*color: #ffffff; suchen wo benötigt und detaillierter lösen!!*/
+/*color: #ffffff; suchen wo benötigt und detaillierter lösen!!*/
 }
 
 .SobiPro .brand {
@@ -365,7 +367,7 @@ div.spScreenTitle h4 {
 
 .infoText a,
 .infoText a:hover {
-  color: #6699ff!important;
+  color: #6699ff !important;
 }
 
 #SPAdminForm input,
@@ -448,6 +450,7 @@ div.spScreenTitle h4 {
 .SobiPro .popover {
   width: 310px;
 }
+
 .SobiPro .popover-inner {
   text-align: left;
 }
@@ -460,10 +463,12 @@ div.spScreenTitle h4 {
 #SPAdminForm .pagination ul {
   height: 28px;
 }
+
 #SPAdminForm .pagination i {
   margin-bottom: -2px;
   margin-top: 2px;
 }
+
 #SPAdminForm .pagination .disabled a,
 #SPAdminForm .pagination .active a,
 #SPAdminForm .pagination .active span {
@@ -471,11 +476,13 @@ div.spScreenTitle h4 {
   cursor: default;
   font-weight: normal;
 }
+
 #SPAdminForm .pagination a:hover,
 #SPAdminForm .pagination .active a,
 #SPAdminForm .pagination .active span {
   background-color: #F5F5F5;
 }
+
 #SPAdminForm .pagination .disabled a:hover {
   background-color: transparent;
 }
@@ -571,39 +578,47 @@ input.sp-input-micro[type="text"] {
   display: block;
   height: 40px;
 }
+
 .spFieldUrlLabel label {
   padding-right: 5px;
   color: #666666;
 }
+
 .spFieldUrl {
   display: block;
 }
+
 .spFieldUrl select {
   width: 100px;
 }
+
 .spFieldCheckbox {
-  float:left;
+  float: left;
 }
+
 .spFieldCheckbox label {
   color: #666666;
 }
+
 .spFieldCheckbox input {
-  margin-top: 8px!important;
-  margin-left: 5px!important;
-  margin-right: 5px!important;
+  margin-top: 8px !important;
+  margin-left: 5px !important;
+  margin-right: 5px !important;
 }
+
 .spFieldRadio {
-  float:left;
+  float: left;
 }
+
 .spFieldRadio label {
   color: #666666;
 }
-.spFieldRadio input {
-  margin-top: 8px!important;
-  margin-left: 5px!important;
-  margin-right: 5px!important;
-}
 
+.spFieldRadio input {
+  margin-top: 8px !important;
+  margin-left: 5px !important;
+  margin-right: 5px !important;
+}
 
 .SobiPro table.mceLayout {
   border-radius: 3px;
@@ -619,9 +634,11 @@ input.sp-input-micro[type="text"] {
   margin-top: 6px;
   color: #666666;
 }
+
 .GeoMap {
-  margin-right: 10px!important;
+  margin-right: 10px !important;
 }
+
 .GeoMap img {
   max-width: inherit;
 }
@@ -632,7 +649,31 @@ input.sp-input-micro[type="text"] {
 }
 
 a.invalid {
-  color: red!important;
+  color: red !important;
   font-weight: normal;
   text-decoration: line-through;
+}
+
+.spFileUpload .progress {
+  clear: left;
+  width: 400px;
+  float: left;
+  margin: 10px;
+}
+
+.spFileUpload .file input {
+  margin-bottom: 10px;
+}
+
+.spFileUpload .progress-message {
+  margin-top: 10px;
+}
+
+.spFileUpload .alert {
+  clear: both;
+  width: 400px;
+}
+
+.spFileUpload button {
+  margin-left: 10px;
 }
