--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -455,6 +455,11 @@ div.spScreenTitle h4 {
   text-align: left;
 }
 
+.SobiPro .popover-inner .spclose {
+  padding-right: 8px;
+  padding-top: 5px;
+  font-size: 15px;
+}
 #SPAdminForm .pagination-toolbar a {
   line-height: 28px;
   color: #1337d1;
@@ -485,6 +490,10 @@ div.spScreenTitle h4 {
 
 #SPAdminForm .pagination .disabled a:hover {
   background-color: transparent;
+}
+
+#SPAdminForm .pagination-page input {
+  width: 60px;
 }
 
 #SPAdminForm .spSubmit {
