--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -566,6 +566,10 @@ input.sp-input-micro[type="text"] {
   background-image: url('@{admIcons}/folder-section-cfg.png');
 }
 
+.spicon-48-SobiApplicationSection {
+  background-image: url('@{admIcons}/folder-application-section.png');
+}
+
 .spUserSelector .response .btn {
   margin: 5px;
   width: 200px;
