--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -447,6 +447,10 @@ div.spScreenTitle h4 {
   border-bottom-color: #000066;
 }
 
+.spConfigAlert {
+  max-width:600px;
+}
+
 .SobiPro .popover {
   width: 310px;
 }
