Donate button in Global Config

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -366,8 +366,12 @@ div.spScreenTitle h4 {
 .SobiPro .tooltip.bottom .tooltip-arrow {
   border-bottom-color: #000066;
 }
-.spConfigAlert {
+#SPAdminForm .spConfigAlert {
   max-width: 600px;
+  margin-left: 20px;
+}
+#SPAdminForm .spConfigAlert a {
+  color: inherit;
 }
 .SobiPro .popover {
   width: 310px;
