--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -447,8 +447,12 @@ div.spScreenTitle h4 {
   border-bottom-color: #000066;
 }
 
-.spConfigAlert {
+#SPAdminForm .spConfigAlert {
   max-width:600px;
+  margin-left: 20px;
+}
+#SPAdminForm .spConfigAlert a {
+  color: inherit;
 }
 
 .SobiPro .popover {
