--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -102,6 +102,11 @@
   text-align: center;
   vertical-align: middle;
 }
+.SobiPro .table th.SpCellLeft,
+.SobiPro .table td.SpCellLeft {
+  text-align: left;
+  vertical-align: middle;
+}
 .submenu-box,
 div.m {
   background-color: #ffffff;
@@ -196,6 +201,9 @@ div.spScreenTitle h4 {
   padding-top: 0px;
   width: 200px;
 }
+#SPAdminForm fieldset .controls {
+  margin-left: 220px;
+}
 .SPAdmNavBar .control-group {
   float: left;
   padding-left: 12px;
@@ -209,9 +217,6 @@ div.spScreenTitle h4 {
   margin-left: 20px;
   width: 180px;
 }
-#SPAdminForm fieldset .controls {
-  margin-left: 220px;
-}
 #SPAdminForm fieldset.form-horizontal div.spEditImage label {
   margin: 5px;
   float: none;
@@ -220,6 +225,13 @@ div.spScreenTitle h4 {
 }
 #SPAdminForm fieldset.form-horizontal label {
   clear: none;
+}
+#SPAdminForm div.spFilterModal .control-label {
+  padding-top: 0px;
+  width: 100px;
+}
+#SPAdminForm div.spFilterModal .controls {
+  margin-left: 120px;
 }
 #SPAdminForm .nav-tabs a {
   color: #0000b3;
