--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -124,6 +124,12 @@
   vertical-align: middle;
 }
 
+.SobiPro .table th.SpCellLeft,
+.SobiPro .table td.SpCellLeft {
+  text-align: left;
+  vertical-align: middle;
+}
+
 .submenu-box, div.m {
   background-color: @background;
 }
@@ -235,10 +241,12 @@ div.spScreenTitle h4 {
   padding-top: 5px;
   color: #0000b3;
 }
-
 #SPAdminForm fieldset .control-label {
   padding-top: 0px;
   width: 200px;
+}
+#SPAdminForm fieldset .controls {
+  margin-left: 220px;
 }
 
 .SPAdmNavBar .control-group {
@@ -257,10 +265,6 @@ div.spScreenTitle h4 {
   width: 180px;
 }
 
-#SPAdminForm fieldset .controls {
-  margin-left: 220px;
-}
-
 #SPAdminForm fieldset.form-horizontal div.spEditImage label {
   margin: 5px;
   float: none;
@@ -270,6 +274,14 @@ div.spScreenTitle h4 {
 
 #SPAdminForm fieldset.form-horizontal label {
   clear: none;
+}
+
+#SPAdminForm div.spFilterModal .control-label {
+  padding-top: 0px;
+  width: 100px;
+}
+#SPAdminForm div.spFilterModal .controls {
+  margin-left: 120px;
 }
 
 #SPAdminForm .nav-tabs a {
