Layout Section template/1

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -590,6 +590,10 @@ input.sp-input-micro[type="text"] {
   background-image: url('@{admIcons}/folder-application-section.png');
 }
 
+.spicon-48-SobiTemplate {
+  background-image: url('@{admIcons}/folder-templates.png');
+}
+
 .spUserSelector .response .btn {
   margin: 5px;
   width: 200px;
