--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -482,6 +482,9 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiApplicationSection {
   background-image: url('../../../../media/sobipro/48x48/folder-application-section.png');
 }
+.spicon-48-SobiTemplate {
+  background-image: url('../../../../media/sobipro/48x48/folder-templates.png');
+}
 .spUserSelector .response .btn {
   margin: 5px;
   width: 200px;
