--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -211,11 +211,11 @@ div.spScreenTitle h4 {
   font-size: 110%;
 }
 
-#SPAdminForm a {
+.SobiPro a {
   color: #0000b3;
 }
 
-#SPAdminForm a:hover {
+.SobiPro a:hover {
   color: #00007b;
 }
 
@@ -459,12 +459,18 @@ div.spScreenTitle h4 {
   border-bottom-color: #000066;
 }
 
-#SPAdminForm .spConfigAlert {
-  max-width:600px;
+.SobiPro .spConfigAlert {
+  max-width: 600px;
   margin-left: 20px;
 }
-#SPAdminForm .spConfigAlert a {
+.SobiPro .spAppAlert {
+  max-width: 700px;
+  margin-left: 20px;
+}
+
+.SobiPro .spSystemAlert a {
   color: inherit;
+  text-decoration: underline;
 }
 
 .SobiPro .popover {
