weils so schön war

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
@@ -293,6 +293,9 @@ li.spOptionGroup {
 	/* background-color: #CCCBCB; */
 }
 
+div#SPMenuCtrl {
+    display: none;
+}
 .spClearFix {
 	clear: both;
 }
