--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -23,6 +23,18 @@
 .SobiPro .clearall {
   clear: both;
 }
+/* to override Joomla styles in IE (especially checkboxes) */
+input.required {
+  background-color: inherit;
+}
+input[type='checkbox'],
+input[type='radio'] {
+  border-style: none;
+  padding-left: 0px!important;
+}
+.SobiPro .collapse {
+  overflow: hidden \9;
+}
 .SobiPro .breadcrumb {
   padding: 7px 14px;
   margin: 0 0 18px;
@@ -59,12 +71,14 @@
 #SPAdminForm #SPAdmToolbar .dropdown-submenu:hover a {
   color: #ffffff;
   background-color: #a90000;
-  *background-color: #890000;
+  background-color: #890000;
+  background-image: -moz-linear-gradient(top, #a90000, #890000);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a90000), to(#890000));
   background-image: -webkit-linear-gradient(top, #a90000, #890000);
   background-image: -o-linear-gradient(top, #a90000, #890000);
   background-image: linear-gradient(to bottom, #a90000, #890000);
-  background-image: -moz-linear-gradient(top, #a90000, #890000);
+  background-repeat: repeat-x;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
   border-color: #a90000 #a90000 #890000;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -272,6 +286,16 @@ div.spScreenTitle h4 {
   background-repeat: repeat-x;
   border-color: #a90000 #a90000 #890000;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  border-bottom-color: #a2a2a2;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+  *zoom: 1;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 .SobiPro .btn-sobipro:hover,
 .SobiPro .btn-sobipro:active,
@@ -520,6 +544,7 @@ input.sp-input-micro[type="text"] {
 }
 .spFieldCheckbox label {
   color: #666666;
+  float: left;
 }
 .spFieldCheckbox input {
   margin-top: 6px !important;
@@ -531,6 +556,7 @@ input.sp-input-micro[type="text"] {
 }
 .spFieldRadio label {
   color: #666666;
+  float: left;
 }
 .spFieldRadio input {
   margin-top: 8px !important;
