--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -499,6 +499,41 @@ div.spScreenTitle h4 {
   text-decoration: underline;
 }
 
+.SobiPro .spStatusAlert {
+  margin-bottom: 10px;
+}
+
+.SobiPro .spStatusHeader {
+  font-size: 18px;
+}
+
+.SobiPro .spBox {
+  border: 1px solid #ccccff;
+  border-radius: 4px;
+  text-align: center;
+  width: 100px;
+  background-color: #ebebfe;
+  padding: 5px;
+  color: #4b4bcd;
+  min-height: 100px;
+}
+.SobiPro .spBox a,
+.SobiPro .spBox a:hover,
+.SobiPro .spBox a:focus {
+  color: #4b4bcd;
+  text-decoration: none;
+}
+.SobiPro li.spBox a img {
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-bottom: 10px;
+}
+
+.SobiPro .thumbnails > li {
+  margin-left: 0px;
+  margin-right: 10px;
+}
+
 .SobiPro .popover {
   width: 310px;
 }
