--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -661,6 +661,10 @@ input.sp-input-micro[type="text"] {
   background-image: url('@{admIcons}/folder-templates.png');
 }
 
+.spicon-48-SobiConfig {
+	background-image: url('@{admIcons}/folder-configuration.png');
+}
+
 .spUserSelector .response .btn {
   margin: 5px;
   width: 200px;
