--- a/Component/branches/SobiPro-1.1/Admin/about/en-GB/credits.html
+++ b/Component/branches/SobiPro-1.1/Admin/about/en-GB/credits.html
@@ -1,27 +1,28 @@
-<div style="height: 400px; padding: 3px;">
-	<h4 style="margin-bottom: 0px;">Sobi Team</h4>
+<div style="height: 460px;">
+	<h4 style="margin-bottom: 2px;">The Sobi Team</h4>
 	<ul>
 		<li>
-			<a href="http://sigrid.sigsiu.net/" target="_blank">Sigrid Suski aka Trinity</a> (<a href="http://sigsiu.net" target="_blank">www.Sigsiu.NET</a>) - Core Developer, Quality &amp; Testing, Documentation, Support, Public Relations
+			<a href="http://sigrid.sigsiu.net/" target="_blank">Sigrid Suski aka Trinity</a><br/>
+            Core Developer, Quality &amp; Testing, Documentation, Translation, Support, Public Relations
 		</li>
 		<li>
-			<a href="http://radek.sigsiu.net/" target="_blank">Radek Suski aka Neo</a> (<a href="http://sigsiu.net" target="_blank">www.Sigsiu.NET</a>) - Core Developer, Software Engineering, Support
+			<a href="http://radek.sigsiu.net/" target="_blank">Radek Suski aka Neo</a><br/>
+            Core Developer, Software Engineering, Support
 		</li>
 		<li>
-			Sławek Sikora aka sikor79 - Quality &amp; Testing, Support
+			Sławek Sikora aka sikor79<br/>
+            Quality &amp; Testing, Documentation, Support
 		</li>
 		<li>
-            Isidro Baquero aka Isidro - Quality &amp; Testing, Support
+            Isidro Baquero aka Isidro<br/>
+            Quality &amp; Testing, Documentation, Support
 		</li>
 	</ul>
 
-    <h4 style="margin-bottom: 0px;">Icons and graphics included in SobiPro</h4>
+    <h4 style="margin-bottom: 2px;">Icons and graphics included in SobiPro</h4>
 	<ul>
 		<li>
 			<a href="http://www.oxygen-icons.org/" target="_blank">Oxygen Icons set</a> used in the admin panel
-		</li>
-		<li>
-			<a href="http://www.robertswebdesign.com/" target="_blank">Vehicles/Cars Icons</a> created by Robert Vining specially for SobiPro sample data.  
 		</li>
 		<li>
 			<a href="http://mediadesign.deviantart.com/" target="_blank">HydroPro Icons</a> created by Benjamin Fleming / *MediaDesign
@@ -31,26 +32,23 @@
 		</li>
 	</ul>
 	
-	<h4 style="margin-bottom: 0px;">Third Party Libraries included in SobiPro</h4>
+	<h4 style="margin-bottom: 2px;">Third Party Libraries included in SobiPro</h4>
 	<ul>
+        <li>
+            <a href="http://twitter.github.com/bootstrap/index.html" target="_blank">Bootstrap</a> - UI framework by @mdo and @fat
+        </li>
 		<li>
-			<a href="http://codemirror.net/" target="_blank">CodeMirror</a> by Marijn Haverbeke
+			<a href="http://codemirror.net/" target="_blank">CodeMirror</a> - editor by Marijn Haverbeke
 		</li>
 		<li>
 			<a href="http://www.destroydrop.com/javascripts/tree/" target="_blank">dTree</a> by Geir Landrö			
 		</li>
 		<li>
-			<a href="http://jquery.com/" target="_blank">jQuery</a> - JavaScript Library
-		</li>
-		<li>
-			<a href="http://www.ericmmartin.com/projects/simplemodal/" target="_blank">SimpleModal</a> - jQuery Plugin by Eric Martin 
-		</li>
-		<li>
-			<a href="http://pl.wikipedia.org/wiki/AdvancedAJAX" target="_blank">AdvancedAJAX</a> by Łukasz Lacha
+			<a href="http://jquery.com/" target="_blank">jQuery</a> - JavaScript Library by the jQuery project
 		</li>
 		<li>
 			<a href="http://id.furud.net/" target="_blank">Web Browser Identifier</a> by Marcin Krol 
 		</li>
 	</ul>
-	<p>Also many thanks to anyone who is involved in the <a href="http://Joomla.org" target="_blank">Joomla!</a> project for creating this great CMS.</p>
+	<p>Also many thanks to anyone who is involved in the <a href="http://www.joomla.org" target="_blank">Joomla!</a> project for creating this great CMS.</p>
 </div>
