--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -121,6 +121,9 @@ input[type='radio'] {
   text-align: left;
   vertical-align: middle;
 }
+.SobiPro .SpCellContainer {
+  clear: both;
+}
 .submenu-box,
 div.m {
   background-color: #ffffff;
@@ -440,11 +443,37 @@ div.spScreenTitle h4 {
   font-size: 13px;
   margin-top: 10px;
 }
+.SobiPro .spCredits,
+.SobiPro .spLicense,
 .SobiPro .spNews {
   font-size: 13px;
 }
-.SobiPro .spNews .spNewsTitle {
-  display: block;
+.SobiPro .SpCellNewsTitle a {
+  font-size: 16px;
+  color: #555555;
+}
+.SobiPro .SpCellNewsTitle {
+  padding-left: 10px;
+}
+.SobiPro .SpCellNewsContent {
+  padding-top: 5px;
+}
+.SobiPro .spNews .SpCellContainer {
+  background-color: #f7f7f7;
+  border: 1px solid #dcdcdc;
+  color: #808080;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  min-height: 90px;
+  padding: 5px;
+}
+.SobiPro .spNews .SpCellContainer img {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.SobiPro .spUpdatesApp {
+  width: 55%;
+  float: left;
 }
 .SobiPro .spBox {
   border: 1px solid #ccccff;
