--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -734,6 +734,10 @@ input.sp-input-micro[type="text"] {
 	background-image: url('@{admIcons}/folder-configuration.png');
 }
 
+.spicon-48-SobiUser {
+  background-image: url('@{admIcons}/sobipro-acl-edit.png');
+}
+
 .spUserSelector .response .btn {
   margin: 5px;
   width: 200px;
