--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -419,8 +419,8 @@ div.spScreenTitle h4 {
 }
 .SobiPro .spStatusAlert {
   margin-bottom: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 .SobiPro .spStatusIssues {
   float: right;
@@ -470,6 +470,9 @@ div.spScreenTitle h4 {
 .SobiPro .spNews .SpCellContainer img {
   padding-right: 10px;
   padding-left: 10px;
+}
+.SobiPro td.SpCellIssueMsg {
+  padding-top: 11px;
 }
 .SobiPro .spUpdatesApp {
   width: 55%;
