--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -505,8 +505,8 @@ div.spScreenTitle h4 {
 
 .SobiPro .spStatusAlert {
   margin-bottom: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 .SobiPro .spStatusIssues {
@@ -561,6 +561,10 @@ div.spScreenTitle h4 {
   padding-right: 10px;
   padding-left: 10px;
 }
+.SobiPro td.SpCellIssueMsg {
+  padding-top: 11px;
+}
+
 .SobiPro .spUpdatesApp {
   width: 55%;
   float: left;
