--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -124,6 +124,9 @@ input[type='radio'] {
 .SobiPro .SpCellContainer {
   clear: both;
 }
+.SobiPro .SpCellPairLabel {
+  margin-right: 10px;
+}
 .submenu-box,
 div.m {
   background-color: #ffffff;
