--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -150,6 +150,10 @@ input[type='radio']{
   clear: both;
 }
 
+.SobiPro .SpCellPairLabel {
+  margin-right: 10px;
+}
+
 .submenu-box, div.m {
   background-color: @background;
 }
