--- a/Component/branches/SobiPro-1.1/Site/views/index.html
+++ b/Component/branches/SobiPro-1.1/Site/views/index.html
@@ -1,5 +1,9 @@
-<h2>SOBI 2 - Sigsiu Online Business Index 2 is a <a
-	href="http://www.sigsiu.net/"
-	title="SOBI - The Directory Component for Joomla">directory
-component</a> for the WCMS Mambo and Joomla! to show entries of companies,
-clubs, persons, shops, products, aso.</h2>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Intentionally left blank</title>
+</head>
+<body>
+</body>
+</html>
