--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -391,6 +391,9 @@ div.spScreenTitle h4 {
 .SobiPro .SpCellCenter .sp-mini-bt {
   padding: 4px 4px !important;
 }
+.SobiPro .SpSmallCol {
+  width: 5%;
+}
 .SobiPro .tooltip-inner {
   color: #ffffff;
   text-align: center;
