--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -471,6 +471,10 @@ div.spScreenTitle h4 {
   padding: 4px 4px !important;
 }
 
+.SobiPro .SpSmallCol {
+  width: 5%;
+}
+
 .SobiPro .tooltip-inner {
   color: #ffffff;
   text-align: center;
