--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -154,6 +154,10 @@ input[type='radio']{
   margin-right: 10px;
 }
 
+.SobiPro .label {
+  padding: 3px 5px 2px;
+}
+
 .submenu-box, div.m {
   background-color: @background;
 }
