--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -127,6 +127,9 @@ input[type='radio'] {
 .SobiPro .SpCellPairLabel {
   margin-right: 10px;
 }
+.SobiPro .label {
+  padding: 3px 5px 2px;
+}
 .submenu-box,
 div.m {
   background-color: #ffffff;
