--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -471,8 +471,21 @@ div.spScreenTitle h4 {
   color: #b22222;
 }
 
+.SobiPro .SpApps .icon-check {
+  color: green;
+}
+.SobiPro .SpApps .icon-bell-alt {
+  color: orange;
+}
+
 .SobiPro .SpCellCenter .sp-mini-bt {
   padding: 4px 4px !important;
+}
+
+.SobiPro .invalid a {
+  color: red;
+  font-weight: normal;
+  text-decoration: line-through;
 }
 
 .SobiPro .SpSmallCol {
@@ -820,6 +833,7 @@ input.sp-input-micro[type="text"] {
   border-radius: 3px;
 }
 
+
 /* Compatibility Styles */
 
 /* GeoMap Field */
@@ -844,8 +858,3 @@ input.sp-input-micro[type="text"] {
   border-radius: 3px;
 }
 
-a.invalid {
-  color: red !important;
-  font-weight: normal;
-  text-decoration: line-through;
-}
